# poo2_pc2_sec02_v2021_1_template

./: CMakeLists.txt  README.md  cppcheck.cpp  generate_zip.sh  run.sh
src/: binary_tree.h  p1.cpp  p1.h  p2.cpp  p2.h  p3.cpp  p3.h
test/: test_1_1.cpp  test_1_1.in  test_1_2.cpp  test_1_2.in  test_2_1.cpp  test_2_1.in  test_2_2.cpp  test_2_2.in  test_3_1.cpp  test_3_2.cpp  test_3_2.in
